k8s/simple/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
   name: k8s-testapp
   labels:
      name: k8s-testapp
