k8s/simple/k8s-testapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-testapp
  namespace: k8s-testapp
spec:
  replicas: 3
  selector:
    matchLabels:
        app: k8s-testapp
  template:
    metadata:
      labels:
        app: k8s-testapp
    spec:
      containers:
        - name: k8s-testapp
          image: ghcr.io/as3ii/k8s-testapp:v0.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: k8s-testapp
  namespace: k8s-testapp
spec:
  selector:
    app: k8s-testapp
  type: ClusterIP
  ports:
    - port: 8080
